# Similar-Player-Detector

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
fifa-stats-crawler-master/fifa-crawler/fifa_parser/spiders/: players_stats.py
