[tool.poetry]
name = "similar-player-detector"
version = "0.1.0"
description = ""
authors = ["hadisotudeh <hadisotudeh1992@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
pandas = "^1.2.1"
streamlit = "^0.76.0"
annoy = "^1.17.0"
Unidecode = "^1.2.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pylint = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
